// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> renders footer correctly 1`] = `
<div
  className="css-16jk3lx"
>
  <span
    className="css-10abcsd"
  >
    <span
      className="css-7r5427"
    >
      <span
        className="css-1mgqi2s"
      >
        <svg
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
          />
        </svg>
      </span>
    </span>
  </span>
  <span
    className="css-10abcsd"
  >
    <span
      className="css-7r5427"
    >
      <span
        className="css-1mgqi2s"
      >
        <svg
          fill="none"
          height={24}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={1.5}
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="5"
          />
          <line
            x1="12"
            x2="12"
            y1="1"
            y2="3"
          />
          <line
            x1="12"
            x2="12"
            y1="21"
            y2="23"
          />
          <line
            x1="4.22"
            x2="5.64"
            y1="4.22"
            y2="5.64"
          />
          <line
            x1="18.36"
            x2="19.78"
            y1="18.36"
            y2="19.78"
          />
          <line
            x1="1"
            x2="3"
            y1="12"
            y2="12"
          />
          <line
            x1="21"
            x2="23"
            y1="12"
            y2="12"
          />
          <line
            x1="4.22"
            x2="5.64"
            y1="19.78"
            y2="18.36"
          />
          <line
            x1="18.36"
            x2="19.78"
            y1="5.64"
            y2="4.22"
          />
        </svg>
      </span>
    </span>
  </span>
</div>
`;

exports[`<Nav /> renders logo dropdown correctly 1`] = `
<section
  className="css-1vco01a"
>
  <div
    className="css-k9ylf6"
  >
    <div
      className="css-pfryns"
    >
      <h2>
        Stopwatch
      </h2>
      <span>
        Track time like a thing
      </span>
    </div>
  </div>
  <div
    className="css-1koizjm"
  >
    <span
      className="css-1ago99h"
    >
      <p
        className="css-1pbk3k6"
      >
        Menu
      </p>
      <a
        className="css-1dtgp6n"
        href="#"
      >
        <span>
          <svg
            fill="none"
            height={18}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={18}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="16"
              y2="12"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="8"
            />
          </svg>
        </span>
        About Stopwatch
      </a>
      <a
        className="css-1dtgp6n"
        href="#"
      >
        <span>
          <svg
            fill="none"
            height={18}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={18}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
            />
            <line
              x1="12"
              x2="12"
              y1="17"
              y2="17"
            />
          </svg>
        </span>
        Help
      </a>
      <a
        className="css-1dtgp6n"
        href="#"
      >
        <span>
          <svg
            fill="none"
            height={18}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={18}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="8"
              x2="16"
              y1="15"
              y2="15"
            />
            <line
              x1="9"
              x2="9.01"
              y1="9"
              y2="9"
            />
            <line
              x1="15"
              x2="15.01"
              y1="9"
              y2="9"
            />
          </svg>
        </span>
        Report Issue
      </a>
      <a
        className="css-1dtgp6n"
        href="#"
      >
        <span>
          <svg
            fill="none"
            height={18}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={18}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
            />
            <polyline
              points="16 17 21 12 16 7"
            />
            <line
              x1="21"
              x2="9"
              y1="12"
              y2="12"
            />
          </svg>
        </span>
        Quit Window
      </a>
    </span>
  </div>
</section>
`;

exports[`<Nav /> renders without correctly 1`] = `
<div
  className="css-17qbjpi"
>
  <div
    className="css-147l09t"
  >
    <div
      className="css-jo7s5y"
    />
    <div
      className="css-sz5c6n"
    >
      <div
        className="css-1rmth23"
      >
        <section
          className="css-1vco01a"
        >
          <div
            className="css-k9ylf6"
          >
            <div
              className="css-pfryns"
            >
              <h2>
                Stopwatch
              </h2>
              <span>
                Track time like a thing
              </span>
            </div>
          </div>
          <div
            className="css-1koizjm"
          >
            <span
              className="css-1ago99h"
            >
              <p
                className="css-1pbk3k6"
              >
                Menu
              </p>
              <a
                className="css-1dtgp6n"
                href="#"
              >
                <span>
                  <svg
                    fill="none"
                    height={18}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width={18}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <line
                      x1="12"
                      x2="12"
                      y1="16"
                      y2="12"
                    />
                    <line
                      x1="12"
                      x2="12"
                      y1="8"
                      y2="8"
                    />
                  </svg>
                </span>
                About Stopwatch
              </a>
              <a
                className="css-1dtgp6n"
                href="#"
              >
                <span>
                  <svg
                    fill="none"
                    height={18}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width={18}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <path
                      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
                    />
                    <line
                      x1="12"
                      x2="12"
                      y1="17"
                      y2="17"
                    />
                  </svg>
                </span>
                Help
              </a>
              <a
                className="css-1dtgp6n"
                href="#"
              >
                <span>
                  <svg
                    fill="none"
                    height={18}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width={18}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <line
                      x1="8"
                      x2="16"
                      y1="15"
                      y2="15"
                    />
                    <line
                      x1="9"
                      x2="9.01"
                      y1="9"
                      y2="9"
                    />
                    <line
                      x1="15"
                      x2="15.01"
                      y1="9"
                      y2="9"
                    />
                  </svg>
                </span>
                Report Issue
              </a>
              <a
                className="css-1dtgp6n"
                href="#"
              >
                <span>
                  <svg
                    fill="none"
                    height={18}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width={18}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
                    />
                    <polyline
                      points="16 17 21 12 16 7"
                    />
                    <line
                      x1="21"
                      x2="9"
                      y1="12"
                      y2="12"
                    />
                  </svg>
                </span>
                Quit Window
              </a>
            </span>
          </div>
        </section>
        <span
          className="css-19duvsz"
        >
          <svg>
            logo.svg
          </svg>
        </span>
        <i
          className="css-1f4kraj"
        >
          <svg
            fill="none"
            height={12}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={1}
            viewBox="0 0 24 24"
            width={12}
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </i>
      </div>
      <div
        className="css-1hvap0d"
      >
        tabs
      </div>
      <div
        className="css-16jk3lx"
      >
        <span
          className="css-10abcsd"
        >
          <span
            className="css-7r5427"
          >
            <span
              className="css-1mgqi2s"
            >
              <svg
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={1.5}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 3v3a2 2 0 0 1-2 2H3m18 0h-3a2 2 0 0 1-2-2V3m0 18v-3a2 2 0 0 1 2-2h3M3 16h3a2 2 0 0 1 2 2v3"
                />
              </svg>
            </span>
          </span>
        </span>
        <span
          className="css-10abcsd"
        >
          <span
            className="css-7r5427"
          >
            <span
              className="css-1mgqi2s"
            >
              <svg
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={1.5}
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="5"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="1"
                  y2="3"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="21"
                  y2="23"
                />
                <line
                  x1="4.22"
                  x2="5.64"
                  y1="4.22"
                  y2="5.64"
                />
                <line
                  x1="18.36"
                  x2="19.78"
                  y1="18.36"
                  y2="19.78"
                />
                <line
                  x1="1"
                  x2="3"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="21"
                  x2="23"
                  y1="12"
                  y2="12"
                />
                <line
                  x1="4.22"
                  x2="5.64"
                  y1="19.78"
                  y2="18.36"
                />
                <line
                  x1="18.36"
                  x2="19.78"
                  y1="5.64"
                  y2="4.22"
                />
              </svg>
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
